# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  parser.py  repository.py  tags_parsing.py  urls.py  valid_length.py  valid_tags.py
page_analyzer/templates/: base.html  header.html  index.html  url_error.html  url_id.html  urls.html
