[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Fedor.Shurgin <shurginfedor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^23.0.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
